Fixed password field being visible + font size

--- a/public_html/css/login.css
+++ b/public_html/css/login.css
@@ -43,27 +43,35 @@ input {
     height: 40px;
     border-radius: 20px;
     outline: none;
+    font-size: 1rem;
 }
 
-input[type=text] {
+input::placeholder {
+    font-size: 1rem;
+}
+
+input[type=text], input[type=password] {
     background-color: var(--clr-neutral-700);
     color: var(--clr-neutral-200);
     border: 2px solid var(--clr-neutral-700);
     padding-left: 10px;
 }
 
-input[type=text]:focus {
+input[type=text]:focus, input[type=password]:focus {
     border: 2px solid var(--clr-neutral-300);
 }
 
 input[type=button], input[type=submit] {
     background-color: var(--clr-neutral-200);
+    color: var(--clr-neutral-800);
     width: calc(50% - 10px);
     height: 40px;
     border-radius: 20px;
     border: none;
     outline: none;
     cursor: pointer;
+    font-weight: bold;
+    font-size: 1rem;
 }
 
 input[id=signin] {
